Validation fixed, to Jakarta Bean Validation changed to javax.validation.